--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="blank.css">
     <title>Blank Favicon</title>
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
-    <h1>It's a fucking blank favicon.</h1>
+    <h1>It's a blank favicon.</h1>
+    <p>To use it, simply add it to your bookmarks bar.</p>
+    
+    <a href="javascript:window.history.back();">Go Back</a>
 </body>
 </html>
